Страницы наконец-то генерируются

--- a/res/css/offline.window.css
+++ b/res/css/offline.window.css
@@ -3,11 +3,27 @@ body {
     padding:0;
     margin:0;
 }
-body > .em_AROUND{
+body .em_AROUND{
     max-width:840px;
-    margin:0 auto;
+    position: sticky;
+    bottom: 0;
 }
 
+.em_Main {
+    display:flex;
+    justify-content: center;
+    align-items: flex-end;
+    background: #ffeeee;
+}
+.em_btn {
+    display:flex;
+    justify-content: space-between;
+}
+.soderzhanije {
+    width:25%;
+    padding:1em;
+    border:1px solid;
+}
 /* прилипчивый блок внизу */
 .stickUP {
     text-align: right;
