--- a/res/css/easy.library.css
+++ b/res/css/easy.library.css
@@ -88,13 +88,17 @@ p.em_CODE, div.em_CODE {
  text-decoration:none;
 }
 a.emHREFTT {
- text-decoration:none;
- font-family:monospace;
- color:#005500;
- transition: background 1s ease;
+    text-decoration:none;
+    font-family:monospace;
+    color:#005500;
+    display:block;
+    box-sizing: border-box;
+    padding:0.5em;
+    border-radius:0.25em;
+    transition: background 1s ease;
 }
 a.emHREFHH {text-decoration:none; color:#884400;}
-a.emHREFTT:hover {background-color:#ffffff9f;}
+a.emHREFTT:hover {background-color:#A69C3099;}
 .emFUNC, .emOPRT, .emFOLD, .emTEXT, .emVAR, .emNUM, .emARR, .emCOMM, .em_MARKER, .emGS {font-weight:bold;font-family:monospace;}
 .emFUNC {color:#ff8800;} /*цвет выделения функций*/
 .emOPRT {color:#008899;} /*цвет выделения операторов*/
