--- a/res/css/offline.window.css
+++ b/res/css/offline.window.css
@@ -7,7 +7,8 @@ html,body {
 
 blockquote {
     border-left: 4px solid rgba(0, 196, 255, 0.43);
-    padding-left: 1em;
+    padding: 0.5em 0.5em 0.5em 1em;
+    background: rgba(255, 255, 255, 0.28);
 }
 
 .em_Main {
