--- a/res/css/qsp_code.css
+++ b/res/css/qsp_code.css
@@ -7,6 +7,7 @@
     overflow:auto;
     text-indent: 0;
     margin:0.4em 0;
+    white-space: nowrap;
 }
 .Monokai-Comment {
     color:#75715e; /* Комментарии QSP, CSS, HTML */
