--- a/res/css/offline.window.css
+++ b/res/css/offline.window.css
@@ -25,7 +25,7 @@ blockquote {
     left:0;
     width:100%;
     height:100%;
-    padding: 1em;
+    padding: 1em 0;
     box-sizing: border-box;
     background-color: rgba(0, 0, 0, 0.87);
     display:none;
