--- a/[source]/98_wiki_to_chm/to_compile/default.css
+++ b/[source]/98_wiki_to_chm/to_compile/default.css
@@ -11,51 +11,7 @@ body, table /* Normal */
  color: #000000;
  text-decoration: none;
 }
-span.f_CodeExample /* Code Example */
-{
- font-size: 8pt;
- font-family: 'Courier New';
- color: #000000;
-}
-span.f_Comment /* Comment */
-{
-}
-span.f_CourierFixed /* Courier Fixed */
-{
- font-size: 9pt;
- font-family: 'Courier New';
-}
-span.f_Heading1 /* Heading1 */
-{
- font-size: 14pt;
- font-weight: bold;
- color: #ffffff;
-}
-span.f_ImageCaption /* Image Caption */
-{
- font-size: 8pt;
- font-weight: bold;
-}
-span.f_Notes /* Notes */
-{
-}
 
-.p_CodeExample /* Code Example */
-{
- white-space: nowrap;
-}
-.p_Comment /* Comment */
-{
-}
-.p_Heading1 /* Heading1 */
-{
-}
-.p_ImageCaption /* Image Caption */
-{
-}
-.p_Notes /* Notes */
-{
-}
 
 
 /* Paragraph styles */
@@ -78,7 +34,7 @@ p code {
     border-radius: 2px;
 }
 
-h4, .syntaxhighlighter, .sectionedit3 {padding-left: 1.25em;}
+h2, h3, h4, .syntaxhighlighter, .sectionedit3 {padding-left: 1.25em;}
 
 /* table of code */
 .syntaxhighlighter .gutter {
@@ -88,7 +44,7 @@ h4, .syntaxhighlighter, .sectionedit3 {padding-left: 1.25em;}
   border-right: 3px solid rgba(0,100, 0, 0.5);
 }
 .syntaxhighlighter .code {padding-left: 1em;}
-.sectionedit1 {
+h1 {
 	background: #808080;
 	color: #ffffff;
 }
