fix: old articles

--- a/[source]/98_wiki_to_chm/to_compile/default.css
+++ b/[source]/98_wiki_to_chm/to_compile/default.css
@@ -34,6 +34,10 @@ p code {
     border-radius: 2px;
 }
 
+h1 {
+  padding-left: 1em;
+}
+
 h2, h3, h4, .syntaxhighlighter, .sectionedit3 {padding-left: 1.25em;}
 
 /* table of code */
